Added styling for header and sidebar

--- a/src/template.html
+++ b/src/template.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todooly</title>
+    <link
+      href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,100italic,300italic,400italic,500italic,500,700,700italic,900,900italic"
+      rel="stylesheet"
+      type="text/css"
+    />
   </head>
   <body>
+    <div class="header">
+      <img src="Logo-Full-Black.png" />
+    </div>
+
     <div class="sidebar">
+      <div class="sidebar-header">
+        <h1>My Projects</h1>
+      </div>
+
       <div class="project-container"></div>
 
       <div id="add-project">
