Added button for adding project

--- a/src/template.html
+++ b/src/template.html
@@ -23,7 +23,8 @@
       <div class="project-container"></div>
 
       <div id="add-project">
-        <input type="text" placeholder="Title" />
+        <input type="text" placeholder="Title" id="add-project-field" />
+        <div id="add-project-btn">+</div>
       </div>
     </div>
 
